--- a/camera.html
+++ b/camera.html
@@ -7,14 +7,15 @@
     <link rel="stylesheet" href="camera.css">
 </head>
 <header>
+   <img id="pp" src="img/cam.2.png" alt="pp">
     <div class="main">
         <div class="logo">
             <img src="img/LOGOblue-01.svg" alt="logo">
         </div>
         <div class="list">
             <ul>
-                <li><a href="index.html" class="active">HOME</a></li>
-                <li><a href="camera.html">CAMERA</a></li>
+                <li><a href="index.html" >HOME</a></li>
+                <li><a href="camera.html" class="active">CAMERA</a></li>
                 <li><a href="cameramodes.html">CAMERA MODES</a></li>
                 <li><a href="gallery.html">GALLERY</a></li>
 
@@ -23,9 +24,8 @@
     </div>
 </header>
 <main>
-    <img src="img/cam.2.png">
-    <p> Most cameras today are digital. Analog cameras has lost popularity over the last couple of decades, and it is fair on an introductory photo tutorial site to focus exclusively on the digital camera.
-        There are three main types of cameras that we will cover here:</p>
+
+
     <br>
     <br>
     <div class="box1">
