--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <img id="panoroma" src="img/panoroma.jpg" alt="panoroma">
         <div class="main">
             <div class="logo">
-                <a href="index.html"><img src="img/LOGOblue-01.svg" alt="logo"></a>
+                <img src="img/LOGOblue-01.svg" alt="logo">
             </div>
             <div class="list">
                 <ul>
@@ -23,6 +23,7 @@
                 </ul>
             </div>
         </div>
+
     </header>
     <main>
         <div class="box1">
@@ -41,4 +42,5 @@
 
     </footer>
 
-</body></html>
+</body>
+</html>
