--- a/gallery.html
+++ b/gallery.html
@@ -13,10 +13,10 @@
         </div>
         <div class="list">
             <ul>
-                <li><a href="index.html" ">HOME</a></li>
+                <li><a href="index.html">HOME</a></li>
                 <li><a href="camera.html">CAMERA</a></li>
                 <li><a href="cameramodes.html">CAMERA MODES</a></li>
-                <li><a href="gallery.html" class="active>GALLERY</a></li>
+                <li><a href="gallery.html" class="active">GALLERY</a></li>
             </ul>
         </div>
     </div>
@@ -84,7 +84,7 @@
     </div>
 
     <div class="gallery">
-        <img src="img/prime.jpg">
+        <img src="img/prime.jpg" alt="camera">
 
     </div>
 
